plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'net.inference4j'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'io.github.inference4j:inference4j-spring-boot-starter:latest.release'
	implementation('io.github.inference4j:inference4j-genai:latest.release') {
		exclude group: 'org.slf4j', module: 'slf4j-nop'
	}
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

springBoot {
	mainClass = 'net.inference4j.showcase.Inference4jShowcaseApplication'
}

tasks.named('bootRun') {
	jvmArgs '--enable-native-access=ALL-UNNAMED'
}
